<resources>
    <string name="app_name" translatable="false">OnePlus Flash Control</string>
    <string name="command_executed">Command executed</string>
    <string name="master">Master control</string>
    <string name="white">White control</string>
    <string name="yellow">Yellow control</string>
    <string name="white2">White control/2</string>
    <string name="yellow2">Yellow control/2</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="info">Yes, really dont use it too often, it may overheat/destroy led</string>
    <string name="destroyer">Eye destroer</string>
    <string name="quadled">Go to Quad-LED</string>
    <string name="dualled">Go to Dual-LED</string>
    <string name="alternateon" translatable="false">Alternate ON</string>
    <string name="alternateoff" translatable="false">Alternate OFF</string>
    <string name="alternatebright" translatable="false">Alternate Brightness ON</string>
    <string name="alternatebrightoff" translatable="false">Alternate Brightness OFF</string>
    <string name="experimental">You discovered experimential and fun stuff</string>
    <string name="back">Back</string>
    <string name="delayvalue" translatable="false">Delay for alternate</string>
    <string name="brightnessalternate" translatable="false">Brightness for alternate</string>
    <string name="buycoffe" translatable="false">Buy me a coffee ☕</string>
    <string name="donate" translatable="true">If you would like to support the project you can donate to us</string>
    <string name="donate2" translatable="true">Tap to visit the donation page, or press and hold to view the supporters list</string>
    <string name="supporters" translatable="true">Supporters</string>
    <string name="double_tap_to_turn_off">Double-tap to turn off LEDs</string>
    <string name="brightness">Brightness</string>
    <string name="flashlight_off">Flashlight OFF</string>
    <string name="flashlight_on">Flashlight ON</string>
    <string name="command_failed">Failed to execute command</string>
    <string name="error_io">Command failed: IO error occurred</string>
    <string name="error_permission">Command failed: Permission denied</string>
    <string name="error_interrupted">Command failed: Process interrupted</string>
    <string name="error_retry_failed">Getting ROOT failed</string>
    <string name="safety">Returned to safe limits</string>
    <string name="burn_awareness">I am aware i can burn my LED</string>
    <string name="default_brightness">Default Brightness</string>
    <string name="set_as_default">Set master as default</string>
    <string name="default_brightness_set">Default brightness set to %1$d</string>
</resources>
