<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_x="0dp"
    android:layout_y="0dp">

    <Button
        android:id="@+id/destroyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="706dp"
        android:text="@string/destroyer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="487dp"
        android:gravity="center"
        android:text="@string/yellow2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="250dp"
        android:gravity="center"
        android:text="@string/master" />

    <SeekBar
        android:id="@+id/masterSeekBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_x="1dp"
        android:layout_y="271dp"
        android:max="255"
        android:min="0" />

    <SeekBar
        android:id="@+id/yellowSeekBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_x="1dp"
        android:layout_y="379dp"
        android:max="255"
        android:min="0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="361dp"
        android:gravity="center"
        android:text="@string/yellow" />

    <SeekBar
        android:id="@+id/white2SeekBar2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_x="1dp"
        android:layout_y="439dp"
        android:max="255"
        android:min="0" />

    <SeekBar
        android:id="@+id/yellow2SeekBar3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_x="0dp"
        android:layout_y="493dp"
        android:max="255"
        android:min="0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="419dp"
        android:gravity="center"
        android:text="@string/white2" />

    <SeekBar
        android:id="@+id/whiteSeekBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_x="0dp"
        android:layout_y="324dp"
        android:max="255"
        android:min="0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="306dp"
        android:gravity="center"
        android:text="@string/white" />

    <TextView
        android:id="@+id/masterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="535dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Master Brightness: 0" />

    <TextView
        android:id="@+id/whiteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="554dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="White Brightness: 0" />

    <TextView
        android:id="@+id/yellowTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="574dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Yellow Brightness: 0" />

    <TextView
        android:id="@+id/white2TextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="-1dp"
        android:layout_y="594dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Yellow Brightness: 0" />

    <TextView
        android:id="@+id/yellow2TextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="613dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Yellow Brightness: 0" />

    <Button
        android:id="@+id/off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="192dp"
        android:text="@string/off" />

    <TextView
        android:id="@+id/flashbrightness"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_x="1dp"
        android:layout_y="57dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="OnePlus Flash Brightness"
        android:textSize="24sp" />

    <Button
        android:id="@+id/on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="146dp"
        android:text="@string/on" />

    <TextView
        android:id="@+id/masterTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="776dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/info" />

    <Button
        android:id="@+id/navigateBackToMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="855dp"
        android:text="@string/dualled" />

</AbsoluteLayout>