<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!-- Title -->

    <TextView
        android:id="@+id/delayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/delayvalue"
        android:textColor="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delayTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/brightnessalternate"
        android:textColor="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <TextView
        android:id="@+id/delayTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Delay: 500ms"
        android:textColor="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delaySeekBar1" />

    <TextView
        android:id="@+id/brightnessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Delay: 500ms"
        android:textColor="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brightnessSeekBar" />

    <com.google.android.material.slider.Slider
        android:id="@+id/delaySeekBar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:max="1000"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:thumbColor="@color/material_dynamic_neutral50"
        app:tickColorActive="@color/material_dynamic_neutral90"
        app:tickColorInactive="@color/material_dynamic_neutral70"
        app:trackColorActive="@color/material_dynamic_neutral60"
        app:trackColorInactive="@color/material_dynamic_neutral40" />

    <com.google.android.material.slider.Slider
        android:id="@+id/brightnessSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:max="1000"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:thumbColor="@color/material_dynamic_neutral50"
        app:tickColorActive="@color/material_dynamic_neutral90"
        app:tickColorInactive="@color/material_dynamic_neutral70"
        app:trackColorActive="@color/material_dynamic_neutral60"
        app:trackColorInactive="@color/material_dynamic_neutral40" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/flashbrightness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button1"
        android:layout_marginTop="?attr/actionBarSize" />

    <!-- On/Off Buttons -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alternateon"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flashbrightness"
        app:backgroundTint="@color/material_dynamic_neutral70" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alternatebright"
        app:backgroundTint="@color/material_dynamic_neutral70"
        app:layout_constraintEnd_toStartOf="@id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/alternatebrightoff"
        app:backgroundTint="@color/material_dynamic_neutral70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/alternateoff"
        app:backgroundTint="@color/material_dynamic_neutral70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/flashbrightness" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/material_dynamic_neutral70" />

</androidx.constraintlayout.widget.ConstraintLayout>